--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,19 @@ body{
     margin:5px;
     width:100vh;height:100vh;
     padding: 1vh;border-radius: 5px;border:2px solid rgb(116, 129, 224)}
-fieldset{
-    width:95vh;
+form{
+    width:40vh;
     height:40vh;
+    margin:5px;
+}
+fieldset *{
+    display: block;
+    margin:auto;
+    text-align: center;
+}
+fieldset{
+    width: 100%;
+    height:100%;
     border-radius: 5px;
 }
 #container{
@@ -38,4 +48,13 @@ footer{
     height:5vh;
     margin-top: 2vh;
     background-color: rgba(0,0,0,0.3);
+}
+textarea{
+    resize: none;
+    overflow-y: scroll;
+    white-space:pre-wrap;
+}
+#dynamic{
+    padding:2px;
+    display: flex;
 }
