--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,29 @@
     position:relative;
 }
 html{
-    top:0;left:0;width:100%;height: 100%;
-    overflow: scroll;
+    top:0;left:0;width:100%;height: 106%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    animation:coloring 10s alternate infinite;
+}
+@keyframes coloring{
+    0%{
+        background-color:rgb(0,100,100);
+    }
+    50%{
+        background-color: rgb(50,100,100);
+    }
+    100%{
+        background-color: rgb(100,100,100);
+    }
 }
 body{
-    margin:5px;
-    width:100vh;height:100vh;
-    padding: 1vh;border-radius: 5px;border:2px solid rgb(116, 129, 224)}
+    padding: 1vh;
+    border-radius: 5px;
+    border:2px solid rgb(116, 129, 224);
+    margin:5px 10px -5vh 10px;
+}
+    
 form{
     width:40vh;
     height:40vh;
@@ -32,7 +48,8 @@ fieldset{
     height: 50vh;
     border: 2px solid rgb(116, 129, 224);
     border-radius: 5px;
-    margin-top: 5px;
+    display: block;
+    margin: 5px auto auto auto;
 }
 canvas{
     background-color: rgba(0,0,0,1);
@@ -40,21 +57,83 @@ canvas{
     height:100%;
 }
 footer{
+    color:rgb(255,255,255);
     position:fixed;
     z-index:1;
-    top:92vh;
+    top:95vh;
     left:0vh;
-    width:100vh;
+    width:120vh;
     height:5vh;
     margin-top: 2vh;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0,0,0,0.5);
 }
 textarea{
     resize: none;
     overflow-y: scroll;
     white-space:pre-wrap;
+    border-radius: 10px;
+}
+textarea:hover{
+    background: rgba(255,255,255,0.7);    
+}
+::-webkit-scrollbar {
+    width: 12px;
+}
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border: 1px solid rgb(116, 129, 224);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+::-webkit-scrollbar-thumb:active{
+    background:#333;
 }
 #dynamic{
     padding:2px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#upper{
+    display: block;
+    margin: auto;
+    width: 90vh;
+    height: 50vh;
+    background-color: rgba(255,255,255,0.7);
+    border: 2px solid rgb(116, 129, 224);
+    border-radius: 5px;
+}
+input[type="submit"]{
+    border-radius: 5px;
+    width:60px;
+    height: 20px;
+}
+input[type="submit"]:hover{
+    border-radius: 5px;
+    width:60px;
+    height: 20px;
+    background-color: rgba(0,0,0,0.3);
+}
+input[type="submit"]:active{
+    border-radius: 5px;
+    width:60px;
+    height: 20px;
+    background-color: rgba(0,0,0,0.5);
+}
+input[type="text"]{
+    border: 2px solid rgb(116, 129, 224);
+    border-radius: 5px;
+}
+input[type="text"]:hover{
+    background: rgba(255,255,255,0.7);
+}
+input[type="text"]:active{
+    border-color: rgb(225, 160, 20);
 }
