--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ body{
 }
     
 form{
-    width:40vh;
-    height:40vh;
+    width:40vw;
+    height:45vh;
     margin:5px;
 }
 fieldset *{
@@ -44,7 +44,7 @@ fieldset{
     border-radius: 5px;
 }
 #container{
-    width:95vh;
+    width:95vw;
     height: 50vh;
     border: 2px solid rgb(116, 129, 224);
     border-radius: 5px;
@@ -62,7 +62,7 @@ footer{
     z-index:1;
     top:95vh;
     left:0vh;
-    width:120vh;
+    width:120vw;
     height:5vh;
     margin-top: 2vh;
     background-color: rgba(0,0,0,0.5);
@@ -104,7 +104,7 @@ textarea:hover{
 #upper{
     display: block;
     margin: auto;
-    width: 90vh;
+    width: 90vw;
     height: 50vh;
     background-color: rgba(255,255,255,0.7);
     border: 2px solid rgb(116, 129, 224);
