--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,13 @@ input[type="text"]:hover{
 input[type="text"]:active{
     border-color: rgb(225, 160, 20);
 }
+#colorButton *,#colorInsertPoint *{
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 0px;
+}
+button{
+    width:30px;
+    height:20px;
+    border-radius:5px;
+}
