--- a/css/style.css
+++ b/css/style.css
@@ -161,3 +161,32 @@ button{
     height: 20px;
     border-radius: 5px;
 }
+#output{
+    display: block;
+    margin: auto;
+    width:90%;
+    height: 80%;
+    overflow-y: scroll;
+    border: 2px solid rgb(116, 129, 224);
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 10px;
+    margin-top:10px;
+}
+#output:hover{
+    background-color: rgba(0,0,0,0.1);
+}
+#loadMessage{
+    color:rgb(112, 88, 61);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: loadMessageChange alternate infinite 10s;
+}
+@keyframes loadMessageChange{
+    from{
+        color:rgb(112, 88, 61);
+    }
+    to{
+        color:rgb(150, 133, 112);
+    }
+}
